--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,13 @@ Authors@R:
            family = "Thonnard",
            role = c("aut", "cre"),
            email = "thonnard.david@gmail.com")
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: David Thonnard <thonnard.david@gmail.com>
+Description: Visualize Morris water maze data
+    GIFs,...
 Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
 BugReports: https://github.com/Thonnard/VisualMWM/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
-Imports: data.table, ggplot2, ggforce, gganimate, magick, purrr, gifski, stats, utils
+Imports: data.table, ggplot2, ggforce, gganimate, magick, purrr, gifski, stats, utils, dplyr, reshape2
