--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ import(ggplot2)
 import(gifski)
 import(magick)
 import(purrr)
-import(reshape2)
 import(stats)
 importFrom(dplyr,group_by)
 importFrom(dplyr,summarize)
@@ -18,3 +17,4 @@ importFrom(gganimate,gifski_renderer)
 importFrom(gganimate,shadow_trail)
 importFrom(gganimate,transition_reveal)
 importFrom(gganimate,transition_time)
+importFrom(reshape2,melt)
