--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(appendGIFs)
 export(barGIF)
 export(circle)
 export(trackGIF)
+export(update)
 import(ggforce)
 import(ggplot2)
 import(gifski)
