--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(appendGIFs)
 export(barGIF)
 export(circle)
 export(trackGIF)
-export(update)
+export(updateCOORD)
 import(ggforce)
 import(ggplot2)
 import(gifski)
