--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(appendGIFs)
 export(barGIF)
 export(circle)
+export(mergeCOORD)
 export(trackGIF)
 export(updateCOORD)
 import(ggforce)
@@ -20,3 +21,5 @@ importFrom(gganimate,shadow_trail)
 importFrom(gganimate,transition_reveal)
 importFrom(gganimate,transition_time)
 importFrom(reshape2,melt)
+importFrom(utils,read.csv)
+importFrom(utils,write.csv)
