--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,12 @@ Authors@R:
 Maintainer: David Thonnard <thonnard.david@gmail.com>
 Description: Visualize Morris water maze data
     GIFs,...
-Depends: R (>= 3.5.0)
+Depends: 
+    R (>= 3.6.0),
+    ggplot2 (>= 3.3.0)
 License: GPL-3 | file LICENSE
 BugReports: https://github.com/Thonnard/VisualMWM/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
-Imports: data.table, ggplot2, ggforce, gganimate, magick, purrr, gifski, dplyr, reshape2
+Imports: data.table, ggforce, gganimate, magick, purrr, gifski, dplyr, reshape2
