--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,10 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,summarize)
 importFrom(gganimate,anim_save)
 importFrom(gganimate,animate)
+importFrom(gganimate,ease_aes)
 importFrom(gganimate,gifski_renderer)
 importFrom(gganimate,shadow_trail)
-importFrom(gganimate,transition_reveal)
+importFrom(gganimate,transition_states)
 importFrom(gganimate,transition_time)
 importFrom(reshape2,melt)
 importFrom(utils,read.csv)
