--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(appendGIFs)
 export(areaQuadrantTime)
 export(barGIF)
 export(circle)
+export(groupCOORD)
 export(mergeCOORD)
 export(trackGIF)
 export(updateCOORD)
