--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,4 @@ BugReports: https://github.com/Thonnard/VisualMWM/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
-Imports: data.table, ggforce, gganimate, magick, purrr, gifski, dplyr, reshape2, viridis
+Imports: data.table, ggforce, gganimate, magick, purrr, gifski, dplyr, reshape2, viridis, readr, readxl, tibble
