--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(magick)
 import(purrr)
 import(stats)
 importFrom(dplyr,group_by)
+importFrom(dplyr,pull)
 importFrom(dplyr,summarize)
 importFrom(gganimate,anim_save)
 importFrom(gganimate,animate)
@@ -23,8 +24,10 @@ importFrom(gganimate,gifski_renderer)
 importFrom(gganimate,shadow_trail)
 importFrom(gganimate,transition_states)
 importFrom(gganimate,transition_time)
+importFrom(readr,read_csv)
+importFrom(readxl,read_xlsx)
 importFrom(reshape2,melt)
-importFrom(utils,read.csv)
+importFrom(tibble,add_column)
 importFrom(utils,write.csv)
 importFrom(viridis,scale_color_viridis)
 importFrom(viridis,scale_fill_viridis)
