create heatmapGIF function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(areaQuadrantTime)
 export(barGIF)
 export(circle)
 export(groupCOORD)
+export(heatmapGIF)
 export(mergeCOORD)
 export(trackGIF)
 export(updateCOORD)
