update for targetdistanceGIF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(circle)
 export(groupCOORD)
 export(heatmapGIF)
 export(mergeCOORD)
+export(targetdistanceGIF)
 export(trackGIF)
 export(updateCOORD)
 import(ggforce)
@@ -23,6 +24,7 @@ importFrom(gganimate,animate)
 importFrom(gganimate,ease_aes)
 importFrom(gganimate,gifski_renderer)
 importFrom(gganimate,shadow_trail)
+importFrom(gganimate,transition_reveal)
 importFrom(gganimate,transition_states)
 importFrom(gganimate,transition_time)
 importFrom(readr,read_csv)
