--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(mergeCOORD)
 export(targetdistanceGIF)
 export(trackGIF)
 export(updateCOORD)
+export(velocityGIF)
 import(ggforce)
 import(ggplot2)
 import(gifski)
