--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: VisualMWM
 Type: Package
 Title: R functions to visualize Morris water maze data
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: 
     person(given = "David",
            family = "Thonnard",
            role = c("aut", "cre"),
            email = "thonnard.david@gmail.com")
 Maintainer: David Thonnard <thonnard.david@gmail.com>
-Description: Visualize Morris water maze data
-    GIFs,...
+Description: This R package provides functions to visualize Morris water maze tracking data in motion! 
+    The goal is to visualize behaviour starting from raw, unprocessed data, i.e. x and y coordinates for every time point, 
+    that is obtained with tracking software (e.g. Ethovision). 
 Depends: 
     R (>= 3.6.0),
     ggplot2 (>= 3.3.0)
