--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: VisualMWM
 Type: Package
 Title: R functions to visualize Morris water maze data
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: 
     person(given = "David",
            family = "Thonnard",
@@ -12,11 +12,12 @@ Description: This R package provides functions to visualize Morris water maze tr
     The goal is to visualize behaviour starting from raw, unprocessed data, i.e. x and y coordinates for every time point, 
     that is obtained with tracking software (e.g. Ethovision). 
 Depends: 
-    R (>= 3.6.0),
-    ggplot2 (>= 3.3.0)
+    R (>= 4.2.0),
+    ggplot2 (>= 3.3.6)
 License: GPL-3 | file LICENSE
 BugReports: https://github.com/Thonnard/VisualMWM/issues
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.0
 Imports: data.table, ggforce, gganimate, magick, purrr, gifski, dplyr, reshape2, viridis, readr, readxl, tibble
